# ChangeLog for media-tv/xdtv
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.29 2006/05/19 20:29:53 flameeyes Exp $

  19 May 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Bump xvid dependency as per bug #133306 thanks to Michael Mauch.

  04 May 2006; Diego Pettenò <flameeyes@gentoo.org> -xdtv-2.3.0.ebuild,
  -xdtv-2.3.1.ebuild:
  Drop old versions.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-xdtv-2.2.0-r1,
  files/digest-xdtv-2.3.0, files/digest-xdtv-2.3.1, files/digest-xdtv-2.3.2,
  Manifest:
  Fixing SHA256 digest, pass four

  07 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Don't run the whole autotools chain if unneeded, use only eautomake.

  28 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libxdtv-i18n-all-1.3.0-ldflags.patch, xdtv-2.3.2.ebuild:
  Add patch to make i18n support respect LDFLAGS and set a soname.

  14 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Drop fonts installed by autotools.

*xdtv-2.3.2 (14 Mar 2006)

  14 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.3.2.ebuild:
  Version bump.

*xdtv-2.3.1 (09 Mar 2006)

  09 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.3.1.ebuild:
  Version bump, now uses internal ffmpeg (patched) copy.

  01 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.0.ebuild:
  Make libXaw optional in case NeXt and Xaw3d are not requested. Thanks to TGL
  <degrenier@easyconnect.fr> in bug #124479.

  04 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.0.ebuild:
  Enable support for IUSEing linguas_* useflags.

  04 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/xdtv-2.2.0-memcpy.patch, -files/xdtv-2.2.0-setXid.patch,
  xdtv-2.2.0-r1.ebuild, -xdtv-2.2.0-r2.ebuild:
  Drop old version, use autotools eclass for current stable.

  02 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.0.ebuild: