@@ -1,81 +1,81 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX libxdtv-i18n-all-1.3.0-ldflags.patch 551 RMD160 91e4d23410d0da27c330f84aeacc388bc723b83f SHA1 b203ad1d6db5b684ef354adf606c62c2955d874e SHA256 97028239e4386ec033d5e4cb392142a2c18fd2ce34f1476b95b0b5f6bfbb0df8 size 551
+AUX libxdtv-i18n-all-1.3.0-ldflags.patch 551 RMD160 91e4d23410d0da27c330f84aeacc388bc723b83f SHA1 b203ad1d6db5b684ef354adf606c62c2955d874e SHA256 97028239e4386ec033d5e4cb392142a2c18fd2ce34f1476b95b0b5f6bfbb0df8
 MD5 7d0c59969eb23101640e6c3881ff62e8 files/libxdtv-i18n-all-1.3.0-ldflags.patch 551
 RMD160 91e4d23410d0da27c330f84aeacc388bc723b83f files/libxdtv-i18n-all-1.3.0-ldflags.patch 551
 SHA256 97028239e4386ec033d5e4cb392142a2c18fd2ce34f1476b95b0b5f6bfbb0df8 files/libxdtv-i18n-all-1.3.0-ldflags.patch 551
-AUX xdtv-2.3.0-setXid.patch 470 RMD160 b117b1f8c453b99fe97887f9c126bcf57fd56bed SHA1 ac08c911365dccb82fc813f0bec30b24a5d7f301 SHA256 1ca929d9d908592bc7374d430dd4cb1d850d55634a37334be0764ff66d2a1c70 size 470
+AUX xdtv-2.3.0-setXid.patch 470 RMD160 b117b1f8c453b99fe97887f9c126bcf57fd56bed SHA1 ac08c911365dccb82fc813f0bec30b24a5d7f301 SHA256 1ca929d9d908592bc7374d430dd4cb1d850d55634a37334be0764ff66d2a1c70
 MD5 109eefe229d78684737dd214b4ccde82 files/xdtv-2.3.0-setXid.patch 470
 RMD160 b117b1f8c453b99fe97887f9c126bcf57fd56bed files/xdtv-2.3.0-setXid.patch 470
 SHA256 1ca929d9d908592bc7374d430dd4cb1d850d55634a37334be0764ff66d2a1c70 files/xdtv-2.3.0-setXid.patch 470
-DIST libxdtv-i18n-ca-1.2.0.tar.gz 561158 RMD160 27b46861a1979254f313ff60ce0312c1cf383a09 SHA256 dc8cdeda683054d035f0596484b65e2ebd9bbecca7490661e050280742423f5c size 561158
-DIST libxdtv-i18n-ca-1.3.0.tar.gz 638256 RMD160 e9e0de1a1c37bee4b7cf001fc42976599df1527e SHA256 6dc2cc65128e9e5d11a536f0b86a57cd193fbc12cbf2817a28e53a2049ed198a size 638256
-DIST libxdtv-i18n-de-1.2.0.tar.gz 559203 RMD160 e94419988b9a59d5d9e6710b94ccd94d42e96c2a SHA256 59a30fa4b2937aa26f199a9b52d07eca50978d891dd266531a50970baf03efff size 559203
-DIST libxdtv-i18n-de-1.3.0.tar.gz 633884 RMD160 5b6d094253bb57fa8c8eb6f677169d74d6af8bcd SHA256 b6abeef649d3b48a40b43d492155ff1e6cbfbb494574b612a834bf14203a05d4 size 633884
-DIST libxdtv-i18n-en-1.2.0.tar.gz 517747 RMD160 9df29ada502ca20b2ddb56f2d2419732506bf0e4 SHA256 f59f691fc4dbd44f7bbd10dc36548dd9938d4bcdf169b2e7a70425b6e3d67bd7 size 517747
-DIST libxdtv-i18n-en-1.3.0.tar.gz 583704 RMD160 3ecc63677a9019a0eb7b5ad08829b4f217cbd863 SHA256 271243cd258778aa44affbcfc6c9bde71d16d8c68288ffa47ce476752c14e1a3 size 583704
-DIST libxdtv-i18n-es-1.2.0.tar.gz 561363 RMD160 22cff5e51de0b8a78473138f9d8f989d654a8cf4 SHA256 34080e3d7a45fc2ee7ee5e5554ace0a7186a01787226cf051544cb4a4052f36f size 561363
-DIST libxdtv-i18n-es-1.3.0.tar.gz 636460 RMD160 6244a3f21a54de3abb2b5de4a28087c6c696ae32 SHA256 582b2599f1abeae6285545355c032d86e2d2ea57c2dd49b7f52662655f5f8a68 size 636460
-DIST libxdtv-i18n-fr-1.2.0.tar.gz 565273 RMD160 d67c097444a0191c8b55f33fbe0dccbc10b4830c SHA256 399b6ac5c000bf451b8c4668a76e4e3fe56eaa1b0925f04e6708232b387bd156 size 565273
-DIST libxdtv-i18n-fr-1.3.0.tar.gz 642408 RMD160 0ae0e3c4e2395f02af49eb5b97b20f7d643b50a4 SHA256 dc41cebb81e8a42b9fec11b9943eb25c843885d6fd39b94660f1d530d3ac86a8 size 642408
-DIST libxdtv-i18n-gl-1.3.0.tar.gz 641434 RMD160 dfe5902c953376087642a6c22c713e916da0cb81 SHA256 975fbe7f4ea9185b63f113662befaee720636463d7a0aa07493f84586dd83966 size 641434
-DIST libxdtv-i18n-it-1.2.0.tar.gz 563947 RMD160 d790324477ef2f56c606230ee96f8b14a03187b9 SHA256 9b1c803fd2b2ca460bc20968939da19161025d5f969f1161fb855c185970c617 size 563947
-DIST libxdtv-i18n-it-1.3.0.tar.gz 638380 RMD160 675207aeac91080b4030fa028d8d56d40ad87292 SHA256 e640ef4bcdfffc55ce7442d120a8bb03bb6b719677cb8ec8c081cff9e7f6d1a3 size 638380
-DIST libxdtv-i18n-ja-1.2.0.tar.gz 544804 RMD160 0d815cb294ab83a0267678114fe44acd5a0a4d16 SHA256 485a8ee6a56653de0c94f94f736f52edeed52e1d1c58a68cfd844205684aa9c1 size 544804
-DIST libxdtv-i18n-ja-1.3.0.tar.gz 621190 RMD160 d2b24f5799ba4fcc5568d679b267c87b19a57e0d SHA256 9b54882b0548de6f668256b5a1d8bbc19dcc5dced978c5f713a0f451ac5f71cd size 621190
-DIST libxdtv-i18n-pl-1.3.0.tar.gz 643831 RMD160 1cd6c507d4d50ac38d435f98b7a5beb88f1dfa17 SHA256 d2f8b26e3c15a964da1715bad060c02f49045f864b554ccc41d08e3218f25000 size 643831
-DIST libxdtv-i18n-ru-1.3.0.tar.gz 639287 RMD160 ca1d95c2357e7682c403ad266384ef8d04316ec6 SHA256 8cd53aa6ac18948223d6cbcfcd5d687cd644243678b58f4f36e62720cf04b340 size 639287
-DIST libxdtv-theme-aqua-ca-1.2.0.tar.gz 324890 RMD160 594b23bf038dc7c193ac2edea51635590f3b19bf SHA256 02a4b3886476c8da0e8b7be5fd9ad1574fb0d61e7fe545af1a9d8e756116eb7f size 324890
-DIST libxdtv-theme-aqua-ca-1.3.0.tar.gz 352441 RMD160 ccded0eb1d1986dd54295126e43a022a84c498ab SHA256 248aede4da383f1dd9c09086f129e54bb49d3fbd3fd5fbb0c453e8fbe34e183b size 352441
-DIST libxdtv-theme-aqua-de-1.2.0.tar.gz 322433 RMD160 69ed567afeea86e5cc1173cd618c57e11b18d076 SHA256 2099635b1a1e403b13eec563e53990c7ac042fe50798100674519d549ce94ec4 size 322433
-DIST libxdtv-theme-aqua-de-1.3.0.tar.gz 351421 RMD160 fc3a997942ad3ef02c0365f52f1113b7b820d28b SHA256 ae61a878fad4271bc99740fca36eb2ff8fb2673cda4730be5eee3da57178b8b8 size 351421
-DIST libxdtv-theme-aqua-en-1.2.0.tar.gz 325032 RMD160 fad7e74e058c6b5eb8dd2ae08463f400c58eedd6 SHA256 22022f4fb70710ad25a0200e5909e57889db85af752fefbc4efa7b9461542823 size 325032
-DIST libxdtv-theme-aqua-en-1.3.0.tar.gz 353233 RMD160 bb351bdfdc9d5a5be42c10a7c7b3a48d89e22dc5 SHA256 b8098b67d5a76933607540920f1cb1c0f92a2ab97c6eaa0cb29c5767d3e775d4 size 353233
-DIST libxdtv-theme-aqua-es-1.2.0.tar.gz 325455 RMD160 de5cfec0bc812415ecf61a3d02907c1eb1f1ea68 SHA256 2e76635dff9e7a3d90d9b0fd1bd898124d491de86d2cafd3aeb25228059f3842 size 325455
-DIST libxdtv-theme-aqua-es-1.3.0.tar.gz 353137 RMD160 222915463e1a1408d2b9abe81617c14c4b34bea7 SHA256 a2e26c47ce562976e3ec285d704604c0d385bb2c3a2d4f90f1020f7b662567b6 size 353137
-DIST libxdtv-theme-aqua-fr-1.2.0.tar.gz 325839 RMD160 df3198964dcd9f6e894be7d9c2d27f078c490c44 SHA256 82fd13ec5d2fc97402a1a2681974f21ed217e82e3e686f421ed89460e6822a94 size 325839
-DIST libxdtv-theme-aqua-fr-1.3.0.tar.gz 354819 RMD160 a98e7b84e8b18f12cd3973449d6b6d43d88ec1cc SHA256 925a82f5dced5b881b240802d1d3e07c0bad40b8f5999aa1a7bdaf2bce0a8876 size 354819
-DIST libxdtv-theme-aqua-gl-1.3.0.tar.gz 360310 RMD160 bef7f53f910e3c35547262c533c781ec66008791 SHA256 3bc3b1991330f2cebc8cf02c852acf3611ba3cb0015a812aa52c75b82fd5de68 size 360310
-DIST libxdtv-theme-aqua-it-1.2.0.tar.gz 324152 RMD160 ba4d184325d40d521434011013a346eb33c057bf SHA256 3652f2ebd1276ede03f574779d1245d388f236693e54dd509f507348084be4bb size 324152
-DIST libxdtv-theme-aqua-it-1.3.0.tar.gz 352958 RMD160 0497616e00b7a43916045af44fb9aab76f42aa4c SHA256 f94157eb84a01325d5e42c29553d64bb8c9a95c223d4e1f350dfe9948d8d3ca0 size 352958
-DIST libxdtv-theme-aqua-ja-1.2.0.tar.gz 306498 RMD160 d1408bb8a5f5e98286b0303413ce8cb21ab370fe SHA256 e1ada41d755d9a08ba5f947fa3a854839acebdf4191620596e49eb6166914e22 size 306498
-DIST libxdtv-theme-aqua-ja-1.3.0.tar.gz 332709 RMD160 72a2958d12348182e11672bb7801c8e76c5329a9 SHA256 92f7aaef28554a0f0c15f68e89c3a7d3c673cd0361b2bcfd36911b2e320a9af0 size 332709
-DIST libxdtv-theme-aqua-pl-1.3.0.tar.gz 359057 RMD160 ac0664da9cdefdd5af70583eb2223c5668611f4f SHA256 3b1fdba8e0abc3b695f23f74825c829db55f7843ac1cfc7d2c15ecc52b7af6de size 359057
-DIST libxdtv-theme-aqua-ru-1.3.0.tar.gz 353110 RMD160 e0a1455a56bac3fe940e9a1e39301002a7b1d49b SHA256 ebac73c26e3bd4bcb1b399c13145e401367f3fe4e2283cf9c736ee33e368b40f size 353110
-DIST libxdtv-theme-carbone-ca-1.2.0.tar.gz 358108 RMD160 3b1aa253366dbaf254218a6e67064b863a7f1a71 SHA256 8e2beac8d972d5e01af0a0b150d949640260471d6bf5a5f9ad9786426e82342b size 358108
-DIST libxdtv-theme-carbone-ca-1.3.0.tar.gz 394819 RMD160 a7502f6b82924e4d4c5fcc892920fe902cda68e5 SHA256 4d857a1f37deb92b4c11a1fde1796413dc195c9520565712fe738552599d7718 size 394819
-DIST libxdtv-theme-carbone-de-1.2.0.tar.gz 357587 RMD160 804c126fd43202e6de4773a8325d4a58d7a606ab SHA256 9e76288a4532fce5aadbd137cae7b063195d289194c7fb8038c681f4017275fe size 357587
-DIST libxdtv-theme-carbone-de-1.3.0.tar.gz 397029 RMD160 9d3e44cf07c8bc3c43dcb3251d8b9f1f2721c27f SHA256 013fb39e0e1ffc04ac6dd90df0e093ff4f7fe98b28ed4bbf1a25cedd57504f4f size 397029
-DIST libxdtv-theme-carbone-en-1.2.0.tar.gz 355666 RMD160 de767a0f80e10af1fb19a4932ab1ac4aa00837d9 SHA256 449303f7016123965dbd46e7bba3b7bc9f296cb6bc06417c3937649916f0651f size 355666
-DIST libxdtv-theme-carbone-en-1.3.0.tar.gz 393569 RMD160 668d897bd93445c2b08179d814a5f40cd5f410c7 SHA256 64df9e88fe751db0d5ddb5e97389bc1d982d39766e97758b67470dd5d3b54fc5 size 393569
-DIST libxdtv-theme-carbone-es-1.2.0.tar.gz 358858 RMD160 dfd7b97845527c9551da4ed0e32c33c60b431c1f SHA256 8ef090f3426c3cabda8e7c6b7fd4c635e52a179f297168bbfc13fa52c4577962 size 358858
-DIST libxdtv-theme-carbone-es-1.3.0.tar.gz 397231 RMD160 07c56713733013afd2a30f2deb8dfd582c387b47 SHA256 17d27aaee357aeed29386f34cb47cad505ef61270f4c69d5133903072bbcf9fb size 397231
-DIST libxdtv-theme-carbone-fr-1.2.0.tar.gz 360314 RMD160 2ad14986241c62c8ace8ab89f73b0be60f9ce3a7 SHA256 edf1168acfac79b6ad16f42655f4f29543165266c40c32ab1ab0883a22a1e7cb size 360314
-DIST libxdtv-theme-carbone-fr-1.3.0.tar.gz 397603 RMD160 a126e4b66ec16426aff0b1b3a47df5d0397b438f SHA256 f6068987364594ab5a368208130e42f26e0f10f42d7e7cdbd5f47be2906feffd size 397603
-DIST libxdtv-theme-carbone-gl-1.3.0.tar.gz 403660 RMD160 00d60ff24c3dfcefcc9450c24a5eb41f9c2dd3a7 SHA256 c24ee64d5808d96e9fa17d0742cd02999086313c51e3ac6e55cc19bed1f3000f size 403660
-DIST libxdtv-theme-carbone-it-1.2.0.tar.gz 361097 RMD160 08608c8d5eb712819e9c00dfd116e1a69d112b7d SHA256 b3fba445ca30805bc940f5c126f722258f9a378e8da11f15b44554ac4d3f414f size 361097
-DIST libxdtv-theme-carbone-it-1.3.0.tar.gz 399396 RMD160 0b6bed802998f26b5d09ece798c32edcf0ed174a SHA256 89cb2f8f1ab29799d6dd8a556af26db882d8aa25ee6548059aedd0cd80716f56 size 399396
-DIST libxdtv-theme-carbone-ja-1.2.0.tar.gz 341365 RMD160 6a09723c967d95743f97f91cb08cdc22d7011b3f SHA256 bcae9e2863d0ddb10011531f104bcc2b879779c77921ec5277b317ac18cd25a4 size 341365
-DIST libxdtv-theme-carbone-ja-1.3.0.tar.gz 373453 RMD160 1596eaaad3db174974e99780deb32071edfc6af2 SHA256 de2246f9653438ccb5ebef85edf97fb179cb1f0b211a969722b0145307149499 size 373453
-DIST libxdtv-theme-carbone-pl-1.3.0.tar.gz 396722 RMD160 3821660aebd489abf2830fff35ac0c8ec3aa3f52 SHA256 d9737a45242b384e557ea56713b14d00c722c23d04aafe68ac9c863494efff9b size 396722
-DIST libxdtv-theme-carbone-ru-1.3.0.tar.gz 394769 RMD160 f9de71a685296cf00339d9193b382597f4e449bd SHA256 6481b50f0a3ea862c152e8000cb281cfb0269331a6d5a2a0fee89e75e0e5282e size 394769
-DIST xdtv-2.2.0-gcc4-amd64.patch.tar.gz 6027 RMD160 eeab9185747eae8f7887d65e5035e7070134bbd3 SHA256 d2307c8cb4dc4459d396da7ffb9309f6a3660d449421796ae1e8152c5cc67afe size 6027
-DIST xdtv-2.2.0.tar.gz 905162 RMD160 ff002f07cbba6d076e73142eb5b1cd1ba97448c3 SHA256 a7828bc963133184f27df78e9c2d23c2b5f75e130801a114b85fbf137d2780c4 size 905162
-DIST xdtv-2.3.2.tar.gz 2775914 RMD160 cac6da447bce28599bc8b806525f6c1a7a7e8ddd SHA256 b36e9a1ce9aaf7e499f1d93ae22e384bf83fbb05c28fcd73da290945142468c1 size 2775914
-EBUILD xdtv-2.2.0-r1.ebuild 6897 RMD160 b7d2942fa795fbc1999eb4981e254eb689bbb8b1 SHA1 72346d7f0f113577680c9d40bec9d83b93f8a27b SHA256 4bf031ffb19e696fe12f05bf093fe16b0ab74a8b3c33bb8663b34883ea6aff8c size 6897
+DIST libxdtv-i18n-ca-1.2.0.tar.gz 561158 RMD160 27b46861a1979254f313ff60ce0312c1cf383a09 SHA256 dc8cdeda683054d035f0596484b65e2ebd9bbecca7490661e050280742423f5c
+DIST libxdtv-i18n-ca-1.3.0.tar.gz 638256 RMD160 e9e0de1a1c37bee4b7cf001fc42976599df1527e SHA256 6dc2cc65128e9e5d11a536f0b86a57cd193fbc12cbf2817a28e53a2049ed198a
+DIST libxdtv-i18n-de-1.2.0.tar.gz 559203 RMD160 e94419988b9a59d5d9e6710b94ccd94d42e96c2a SHA256 59a30fa4b2937aa26f199a9b52d07eca50978d891dd266531a50970baf03efff
+DIST libxdtv-i18n-de-1.3.0.tar.gz 633884 RMD160 5b6d094253bb57fa8c8eb6f677169d74d6af8bcd SHA256 b6abeef649d3b48a40b43d492155ff1e6cbfbb494574b612a834bf14203a05d4
+DIST libxdtv-i18n-en-1.2.0.tar.gz 517747 RMD160 9df29ada502ca20b2ddb56f2d2419732506bf0e4 SHA256 f59f691fc4dbd44f7bbd10dc36548dd9938d4bcdf169b2e7a70425b6e3d67bd7
+DIST libxdtv-i18n-en-1.3.0.tar.gz 583704 RMD160 3ecc63677a9019a0eb7b5ad08829b4f217cbd863 SHA1 ec0b9c9b1e47ebd2d1d311ea031ad914b798edae SHA256 271243cd258778aa44affbcfc6c9bde71d16d8c68288ffa47ce476752c14e1a3
+DIST libxdtv-i18n-es-1.2.0.tar.gz 561363 RMD160 22cff5e51de0b8a78473138f9d8f989d654a8cf4 SHA256 34080e3d7a45fc2ee7ee5e5554ace0a7186a01787226cf051544cb4a4052f36f
+DIST libxdtv-i18n-es-1.3.0.tar.gz 636460 RMD160 6244a3f21a54de3abb2b5de4a28087c6c696ae32 SHA256 582b2599f1abeae6285545355c032d86e2d2ea57c2dd49b7f52662655f5f8a68
+DIST libxdtv-i18n-fr-1.2.0.tar.gz 565273 RMD160 d67c097444a0191c8b55f33fbe0dccbc10b4830c SHA256 399b6ac5c000bf451b8c4668a76e4e3fe56eaa1b0925f04e6708232b387bd156
+DIST libxdtv-i18n-fr-1.3.0.tar.gz 642408 RMD160 0ae0e3c4e2395f02af49eb5b97b20f7d643b50a4 SHA256 dc41cebb81e8a42b9fec11b9943eb25c843885d6fd39b94660f1d530d3ac86a8
+DIST libxdtv-i18n-gl-1.3.0.tar.gz 641434 RMD160 dfe5902c953376087642a6c22c713e916da0cb81 SHA256 975fbe7f4ea9185b63f113662befaee720636463d7a0aa07493f84586dd83966
+DIST libxdtv-i18n-it-1.2.0.tar.gz 563947 RMD160 d790324477ef2f56c606230ee96f8b14a03187b9 SHA256 9b1c803fd2b2ca460bc20968939da19161025d5f969f1161fb855c185970c617
+DIST libxdtv-i18n-it-1.3.0.tar.gz 638380 RMD160 675207aeac91080b4030fa028d8d56d40ad87292 SHA1 29c58b213e9da9cb3ef04182fa5eec5e52e85307 SHA256 e640ef4bcdfffc55ce7442d120a8bb03bb6b719677cb8ec8c081cff9e7f6d1a3
+DIST libxdtv-i18n-ja-1.2.0.tar.gz 544804 RMD160 0d815cb294ab83a0267678114fe44acd5a0a4d16 SHA256 485a8ee6a56653de0c94f94f736f52edeed52e1d1c58a68cfd844205684aa9c1
+DIST libxdtv-i18n-ja-1.3.0.tar.gz 621190 RMD160 d2b24f5799ba4fcc5568d679b267c87b19a57e0d SHA256 9b54882b0548de6f668256b5a1d8bbc19dcc5dced978c5f713a0f451ac5f71cd
+DIST libxdtv-i18n-pl-1.3.0.tar.gz 643831 RMD160 1cd6c507d4d50ac38d435f98b7a5beb88f1dfa17 SHA256 d2f8b26e3c15a964da1715bad060c02f49045f864b554ccc41d08e3218f25000
+DIST libxdtv-i18n-ru-1.3.0.tar.gz 639287 RMD160 ca1d95c2357e7682c403ad266384ef8d04316ec6 SHA256 8cd53aa6ac18948223d6cbcfcd5d687cd644243678b58f4f36e62720cf04b340
+DIST libxdtv-theme-aqua-ca-1.2.0.tar.gz 324890 RMD160 594b23bf038dc7c193ac2edea51635590f3b19bf SHA256 02a4b3886476c8da0e8b7be5fd9ad1574fb0d61e7fe545af1a9d8e756116eb7f
+DIST libxdtv-theme-aqua-ca-1.3.0.tar.gz 352441 RMD160 ccded0eb1d1986dd54295126e43a022a84c498ab SHA256 248aede4da383f1dd9c09086f129e54bb49d3fbd3fd5fbb0c453e8fbe34e183b
+DIST libxdtv-theme-aqua-de-1.2.0.tar.gz 322433 RMD160 69ed567afeea86e5cc1173cd618c57e11b18d076 SHA256 2099635b1a1e403b13eec563e53990c7ac042fe50798100674519d549ce94ec4
+DIST libxdtv-theme-aqua-de-1.3.0.tar.gz 351421 RMD160 fc3a997942ad3ef02c0365f52f1113b7b820d28b SHA256 ae61a878fad4271bc99740fca36eb2ff8fb2673cda4730be5eee3da57178b8b8
+DIST libxdtv-theme-aqua-en-1.2.0.tar.gz 325032 RMD160 fad7e74e058c6b5eb8dd2ae08463f400c58eedd6 SHA256 22022f4fb70710ad25a0200e5909e57889db85af752fefbc4efa7b9461542823
+DIST libxdtv-theme-aqua-en-1.3.0.tar.gz 353233 RMD160 bb351bdfdc9d5a5be42c10a7c7b3a48d89e22dc5 SHA256 b8098b67d5a76933607540920f1cb1c0f92a2ab97c6eaa0cb29c5767d3e775d4
+DIST libxdtv-theme-aqua-es-1.2.0.tar.gz 325455 RMD160 de5cfec0bc812415ecf61a3d02907c1eb1f1ea68 SHA256 2e76635dff9e7a3d90d9b0fd1bd898124d491de86d2cafd3aeb25228059f3842
+DIST libxdtv-theme-aqua-es-1.3.0.tar.gz 353137 RMD160 222915463e1a1408d2b9abe81617c14c4b34bea7 SHA256 a2e26c47ce562976e3ec285d704604c0d385bb2c3a2d4f90f1020f7b662567b6
+DIST libxdtv-theme-aqua-fr-1.2.0.tar.gz 325839 RMD160 df3198964dcd9f6e894be7d9c2d27f078c490c44 SHA256 82fd13ec5d2fc97402a1a2681974f21ed217e82e3e686f421ed89460e6822a94
+DIST libxdtv-theme-aqua-fr-1.3.0.tar.gz 354819 RMD160 a98e7b84e8b18f12cd3973449d6b6d43d88ec1cc SHA256 925a82f5dced5b881b240802d1d3e07c0bad40b8f5999aa1a7bdaf2bce0a8876
+DIST libxdtv-theme-aqua-gl-1.3.0.tar.gz 360310 RMD160 bef7f53f910e3c35547262c533c781ec66008791 SHA256 3bc3b1991330f2cebc8cf02c852acf3611ba3cb0015a812aa52c75b82fd5de68
+DIST libxdtv-theme-aqua-it-1.2.0.tar.gz 324152 RMD160 ba4d184325d40d521434011013a346eb33c057bf SHA256 3652f2ebd1276ede03f574779d1245d388f236693e54dd509f507348084be4bb
+DIST libxdtv-theme-aqua-it-1.3.0.tar.gz 352958 RMD160 0497616e00b7a43916045af44fb9aab76f42aa4c SHA256 f94157eb84a01325d5e42c29553d64bb8c9a95c223d4e1f350dfe9948d8d3ca0
+DIST libxdtv-theme-aqua-ja-1.2.0.tar.gz 306498 RMD160 d1408bb8a5f5e98286b0303413ce8cb21ab370fe SHA256 e1ada41d755d9a08ba5f947fa3a854839acebdf4191620596e49eb6166914e22
+DIST libxdtv-theme-aqua-ja-1.3.0.tar.gz 332709 RMD160 72a2958d12348182e11672bb7801c8e76c5329a9 SHA256 92f7aaef28554a0f0c15f68e89c3a7d3c673cd0361b2bcfd36911b2e320a9af0
+DIST libxdtv-theme-aqua-pl-1.3.0.tar.gz 359057 RMD160 ac0664da9cdefdd5af70583eb2223c5668611f4f SHA256 3b1fdba8e0abc3b695f23f74825c829db55f7843ac1cfc7d2c15ecc52b7af6de
+DIST libxdtv-theme-aqua-ru-1.3.0.tar.gz 353110 RMD160 e0a1455a56bac3fe940e9a1e39301002a7b1d49b SHA256 ebac73c26e3bd4bcb1b399c13145e401367f3fe4e2283cf9c736ee33e368b40f
+DIST libxdtv-theme-carbone-ca-1.2.0.tar.gz 358108 RMD160 3b1aa253366dbaf254218a6e67064b863a7f1a71 SHA256 8e2beac8d972d5e01af0a0b150d949640260471d6bf5a5f9ad9786426e82342b
+DIST libxdtv-theme-carbone-ca-1.3.0.tar.gz 394819 RMD160 a7502f6b82924e4d4c5fcc892920fe902cda68e5 SHA256 4d857a1f37deb92b4c11a1fde1796413dc195c9520565712fe738552599d7718
+DIST libxdtv-theme-carbone-de-1.2.0.tar.gz 357587 RMD160 804c126fd43202e6de4773a8325d4a58d7a606ab SHA256 9e76288a4532fce5aadbd137cae7b063195d289194c7fb8038c681f4017275fe
+DIST libxdtv-theme-carbone-de-1.3.0.tar.gz 397029 RMD160 9d3e44cf07c8bc3c43dcb3251d8b9f1f2721c27f SHA256 013fb39e0e1ffc04ac6dd90df0e093ff4f7fe98b28ed4bbf1a25cedd57504f4f
+DIST libxdtv-theme-carbone-en-1.2.0.tar.gz 355666 RMD160 de767a0f80e10af1fb19a4932ab1ac4aa00837d9 SHA256 449303f7016123965dbd46e7bba3b7bc9f296cb6bc06417c3937649916f0651f
+DIST libxdtv-theme-carbone-en-1.3.0.tar.gz 393569 RMD160 668d897bd93445c2b08179d814a5f40cd5f410c7 SHA256 64df9e88fe751db0d5ddb5e97389bc1d982d39766e97758b67470dd5d3b54fc5
+DIST libxdtv-theme-carbone-es-1.2.0.tar.gz 358858 RMD160 dfd7b97845527c9551da4ed0e32c33c60b431c1f SHA256 8ef090f3426c3cabda8e7c6b7fd4c635e52a179f297168bbfc13fa52c4577962
+DIST libxdtv-theme-carbone-es-1.3.0.tar.gz 397231 RMD160 07c56713733013afd2a30f2deb8dfd582c387b47 SHA256 17d27aaee357aeed29386f34cb47cad505ef61270f4c69d5133903072bbcf9fb
+DIST libxdtv-theme-carbone-fr-1.2.0.tar.gz 360314 RMD160 2ad14986241c62c8ace8ab89f73b0be60f9ce3a7 SHA256 edf1168acfac79b6ad16f42655f4f29543165266c40c32ab1ab0883a22a1e7cb
+DIST libxdtv-theme-carbone-fr-1.3.0.tar.gz 397603 RMD160 a126e4b66ec16426aff0b1b3a47df5d0397b438f SHA256 f6068987364594ab5a368208130e42f26e0f10f42d7e7cdbd5f47be2906feffd
+DIST libxdtv-theme-carbone-gl-1.3.0.tar.gz 403660 RMD160 00d60ff24c3dfcefcc9450c24a5eb41f9c2dd3a7 SHA256 c24ee64d5808d96e9fa17d0742cd02999086313c51e3ac6e55cc19bed1f3000f
+DIST libxdtv-theme-carbone-it-1.2.0.tar.gz 361097 RMD160 08608c8d5eb712819e9c00dfd116e1a69d112b7d SHA256 b3fba445ca30805bc940f5c126f722258f9a378e8da11f15b44554ac4d3f414f
+DIST libxdtv-theme-carbone-it-1.3.0.tar.gz 399396 RMD160 0b6bed802998f26b5d09ece798c32edcf0ed174a SHA256 89cb2f8f1ab29799d6dd8a556af26db882d8aa25ee6548059aedd0cd80716f56
+DIST libxdtv-theme-carbone-ja-1.2.0.tar.gz 341365 RMD160 6a09723c967d95743f97f91cb08cdc22d7011b3f SHA256 bcae9e2863d0ddb10011531f104bcc2b879779c77921ec5277b317ac18cd25a4
+DIST libxdtv-theme-carbone-ja-1.3.0.tar.gz 373453 RMD160 1596eaaad3db174974e99780deb32071edfc6af2 SHA256 de2246f9653438ccb5ebef85edf97fb179cb1f0b211a969722b0145307149499
+DIST libxdtv-theme-carbone-pl-1.3.0.tar.gz 396722 RMD160 3821660aebd489abf2830fff35ac0c8ec3aa3f52 SHA256 d9737a45242b384e557ea56713b14d00c722c23d04aafe68ac9c863494efff9b
+DIST libxdtv-theme-carbone-ru-1.3.0.tar.gz 394769 RMD160 f9de71a685296cf00339d9193b382597f4e449bd SHA256 6481b50f0a3ea862c152e8000cb281cfb0269331a6d5a2a0fee89e75e0e5282e
+DIST xdtv-2.2.0-gcc4-amd64.patch.tar.gz 6027 RMD160 eeab9185747eae8f7887d65e5035e7070134bbd3 SHA256 d2307c8cb4dc4459d396da7ffb9309f6a3660d449421796ae1e8152c5cc67afe
+DIST xdtv-2.2.0.tar.gz 905162 RMD160 ff002f07cbba6d076e73142eb5b1cd1ba97448c3 SHA256 a7828bc963133184f27df78e9c2d23c2b5f75e130801a114b85fbf137d2780c4
+DIST xdtv-2.3.2.tar.gz 2775914 RMD160 cac6da447bce28599bc8b806525f6c1a7a7e8ddd SHA1 9da7908aff85f35a467c4f27879423cc09d65582 SHA256 b36e9a1ce9aaf7e499f1d93ae22e384bf83fbb05c28fcd73da290945142468c1
+EBUILD xdtv-2.2.0-r1.ebuild 6897 RMD160 b7d2942fa795fbc1999eb4981e254eb689bbb8b1 SHA1 72346d7f0f113577680c9d40bec9d83b93f8a27b SHA256 4bf031ffb19e696fe12f05bf093fe16b0ab74a8b3c33bb8663b34883ea6aff8c
 MD5 1e7b8cb859e5e3037e187ea552c65192 xdtv-2.2.0-r1.ebuild 6897
 RMD160 b7d2942fa795fbc1999eb4981e254eb689bbb8b1 xdtv-2.2.0-r1.ebuild 6897
 SHA256 4bf031ffb19e696fe12f05bf093fe16b0ab74a8b3c33bb8663b34883ea6aff8c xdtv-2.2.0-r1.ebuild 6897
-EBUILD xdtv-2.3.2.ebuild 5440 RMD160 530acc62e37c4652cd1add1288f7e02db5ba0a5b SHA1 5782b40fb48aad6ca218b34450d12f287cf44de8 SHA256 5f02a31b8edd978d8b7d4db90d7f09aa8aa150994136b28da0e47469c7d9b085 size 5440
-MD5 2d1a45a39c61cdc511169f12b019f1c1 xdtv-2.3.2.ebuild 5440
-RMD160 530acc62e37c4652cd1add1288f7e02db5ba0a5b xdtv-2.3.2.ebuild 5440
-SHA256 5f02a31b8edd978d8b7d4db90d7f09aa8aa150994136b28da0e47469c7d9b085 xdtv-2.3.2.ebuild 5440
-MISC ChangeLog 4693 RMD160 233097dc9b131d7f445ed50b7b6f576aec743316 SHA1 0aa5fdc97cbb58372c34f1ce8df5a6536baf8785 SHA256 7e07b35db0dbf87c64a4a10e69cc02d4f3b1f281bf299abf45e05c24e1a76549 size 4693
-MD5 69dc0dd2bb6201bcb67c8bba94cecbfc ChangeLog 4693
-RMD160 233097dc9b131d7f445ed50b7b6f576aec743316 ChangeLog 4693
-SHA256 7e07b35db0dbf87c64a4a10e69cc02d4f3b1f281bf299abf45e05c24e1a76549 ChangeLog 4693
-MISC metadata.xml 252 RMD160 9fe0fe39a9fa8f2fce26f12d0d5caada0a1593cd SHA1 40066ea1ed9d73b98efac9f1af00a78527062db6 SHA256 4c5fd4c15db1f66e645f0591edae40f860fd78c83b2edc0ae264eef1d03092f5 size 252
+EBUILD xdtv-2.3.2.ebuild 5619 RMD160 6c137844fa13be58d7ebaec7f4e94c3d41def9a9 SHA1 adb9823a2bf667e0dc8ba703154d171a084710f9 SHA256 f156045d6b2492271176580bb633d1377e879b1d40509e90c170d7af05efa556
+MD5 a94c77905dbee978edbd2e10e883cb0b xdtv-2.3.2.ebuild 5619
+RMD160 6c137844fa13be58d7ebaec7f4e94c3d41def9a9 xdtv-2.3.2.ebuild 5619
+SHA256 f156045d6b2492271176580bb633d1377e879b1d40509e90c170d7af05efa556 xdtv-2.3.2.ebuild 5619
+MISC ChangeLog 4879 RMD160 2018ebcd24999ccd088c7ff3d4f76969d78c7e54 SHA1 9ee879d714f39961aa0faf991ad0f30eae6e5dfd SHA256 18775c1bf2a765bccbbeb49bb42948f7d1da15b30db2ec045b1806fdf7ba9804
+MD5 cfae5142f2826faf603b338338f6fc59 ChangeLog 4879
+RMD160 2018ebcd24999ccd088c7ff3d4f76969d78c7e54 ChangeLog 4879
+SHA256 18775c1bf2a765bccbbeb49bb42948f7d1da15b30db2ec045b1806fdf7ba9804 ChangeLog 4879
+MISC metadata.xml 252 RMD160 9fe0fe39a9fa8f2fce26f12d0d5caada0a1593cd SHA1 40066ea1ed9d73b98efac9f1af00a78527062db6 SHA256 4c5fd4c15db1f66e645f0591edae40f860fd78c83b2edc0ae264eef1d03092f5
 MD5 0dfc4d0a0cad3dc6b761593f69ac917b metadata.xml 252
 RMD160 9fe0fe39a9fa8f2fce26f12d0d5caada0a1593cd metadata.xml 252
 SHA256 4c5fd4c15db1f66e645f0591edae40f860fd78c83b2edc0ae264eef1d03092f5 metadata.xml 252
@@ -88,7 +88,7 @@ SHA256 6bd1ae4e62b508203fb24d9be4476ae03dbf36898b590af11fa3c1c15ffa97ce files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEbirIAiZjviIA2XgRAgLWAKDRFHU8z3s7mL9K12rXDHhRrmFdpwCghkF4
-q/46vAAqHAYu7VS3A3S4tdQ=
-=YU9j
+iD8DBQFEg0tjAiZjviIA2XgRAocIAKDJ+3lYOliVKfrlana8uZrHOY5yoQCg5VFa
+hfJSbtXLAJ0nsFbpyYPmvdc=
+=uuId
 -----END PGP SIGNATURE-----
