@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/xdtv
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.29 2006/05/19 20:29:53 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.30 2006/06/04 21:06:35 flameeyes Exp $
+
+  04 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
+  Install the defaults in the right directory when using modular xorg. Thanks
+  Donnie for the detection action.
 
   19 May 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
   Bump xvid dependency as per bug #133306 thanks to Michael Mauch.
